--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,8 +4,20 @@ index:
 
 doctor:
     path: /doctor
+    methods: GET
     controller: App\Controller\Controller::doctor
+
+createDoctor:
+    path: /doctor
+    methods: POST
+    controller: App\Controller\Controller::createDoctor
 
 slots:
     path: /slots/{doctorId}
+    methods: GET
     controller: App\Controller\Controller::slots
+
+createSlot:
+    path: /slots/{doctorId}
+    methods: POST
+    controller: App\Controller\Controller::createSlot
